--- a/PalEditor/PalEditor.csproj
+++ b/PalEditor/PalEditor.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PalEditor</RootNamespace>
-    <AssemblyName>PalEditor</AssemblyName>
+    <AssemblyName>PalEditorM8</AssemblyName>
     <ProjectTypeGuids>{4D628B5B-2FBC-4AA6-8C16-197242AEB884};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PlatformFamilyName>PocketPC</PlatformFamilyName>
     <PlatformID>3C41C503-53EF-4c2a-8DD4-A8217CAD115E</PlatformID>
@@ -19,10 +19,8 @@
     <FormFactorID>
     </FormFactorID>
     <ApplicationIcon>sdlpal.ico</ApplicationIcon>
-    <SignAssembly>true</SignAssembly>
-    <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Administrator\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
-    <DelaySign>False</DelaySign>
-    <NoWin32Manifest>True</NoWin32Manifest>
+    <SignAssembly>false</SignAssembly>
+    <StartupObject>PalEditor.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +48,7 @@
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.WindowsCE.Forms" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
